# FHIR-PYrate

./: .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: mypy-flake-test.yml  python-publish.yml
examples/: 1-simple-json-to-df.ipynb  2-condition-to-imaging-study.ipynb  3-observation-for-condition.ipynb  4-patients-for-diagnostic-report.ipynb  example.csv
fhir_pyrate/: __init__.py  ahoy.py  dicom_downloader.py  miner.py  pirate.py
fhir_pyrate/util/: __init__.py  bundle_processing_templates.py  constants.py  fhirobj.py  imports.py  token_auth.py  util.py
tests/: test_public.py
