[tool.poetry]
name = "fhir-pyrate"
version = "0.2.0-beta.5"
description = "FHIR-PYrate is a package that provides a high-level API to query FHIR Servers for bundles of resources and return the structured information as pandas DataFrames. It can also be used to filter resources using RegEx and SpaCy and download DICOM studies and series."
license = "MIT"
authors = ["Giulia Baldini <giulia.baldini@uk-essen.de>", "Rene Hosch <rene.hosch@uk-essen.de>"]
readme = "README.md"
repository = "https://github.com/UMEssen/FHIR-PYrate"
keywords = ["python", "fhir", "data-science", "fhirpath", "healthcare"]
include = ["LICENCE"]
packages = [
    { include = "fhir_pyrate" },
]

[tool.poetry.dependencies]
python = "^3.8"
###
SimpleITK = { version = "^2.0.2", optional = true }
pydicom = { version = "^2.1.2", optional = true }
dicomweb-client = { version = "^0.52.0", optional = true }
spacy = { version = "^3.0.6", optional = true }
###
numpy = "^1.22"
pandas = "^1.3.0"
tqdm = "^4.56.0"
requests = "^2.28.0"
PyJWT = "^2.4.0"
fhirpathpy = "^0.1.0"


[tool.poetry.extras]
downloader = ["SimpleITK", "pydicom", "dicomweb-client"]
miner = ["spacy"]
all = ["SimpleITK", "pydicom", "dicomweb-client", "spacy"]

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^22.3.0"
beautifulsoup4 = "^4.11.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.isort]
profile = "black"
line_length = 88
