[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=80", "wheel" ]

[project]
name = "fhir-pyrate"
version = "0.2.4.post1"
description = "FHIR-PYrate is a package that provides a high-level API to query FHIR Servers for bundles of resources and return the structured information as pandas DataFrames. It can also be used to filter resources using RegEx and SpaCy and download DICOM studies and series."
readme = "README.md"
keywords = [ "data-science", "fhir", "fhirpath", "healthcare", "python" ]
license-files = [ "LICENSE" ]
authors = [
  { name = "Giulia Baldini", email = "giulia.baldini@uk-essen.de" },
  { name = "Rene Hosch", email = "rene.hosch@uk-essen.de" },
]
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fhirpathpy>=0.2.2",
  "numpy>=2",
  "pandas>=2",
  "pyjwt>=2.4",
  "requests>=2.31",
  "requests-cache>=0.9.7",
  "tqdm>=4.56",
]

optional-dependencies.all = [
  "dicomweb-client>=0.52",
  "pydicom>=3.0.1",
  "simpleitk>=2.0.2",
  "spacy>=3.0.6",
]
optional-dependencies.downloader = [
  "dicomweb-client>=0.52",
  "pydicom>=2.1.2",
  "simpleitk>=2.0.2",
]
optional-dependencies.miner = [
  "spacy>=3.0.6",
]
urls = { Repository = "https://github.com/UMEssen/FHIR-PYrate" }

[dependency-groups]
dev = [
  "beautifulsoup4>=4.11.1,<5",
  "jupyter>=1,<2",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "python-dotenv>=1.2.1",
]

[tool.setuptools.packages.find]
include = [ "fhir_pyrate*" ]

[tool.ruff]
target-version = "py310"

# Same as Black
line-length = 88
lint.select = [
  "B", # flake8-bugbear
  "C", # flake8-comprehensions
  # "D",  # pydocstyle
  "D401", # First line of docstring should be in imperative mood
  "E",    # pycodestyle errors
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "I",    # isort
  # "PL",   # pylint
  "RUF", # ruff
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "C901",    # Too complex
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in magic method
  "E501",    # line too long, handled by black
  "PLR2004", # Magic value used in comparison, consider replacing # with a constant variable
]
lint.unfixable = [
  "F401", # Do not fix unused imports, it's annoying during development
]
lint.pydocstyle.convention = "google"

[tool.mypy]
# Ensure full coverage
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true

[virtualenvs]
create = true
in-project = true

[tool.markdownlint]
# Disable rules globally
disable = [
  "MD013", # line-length
]
